--- a/src/components/styles/app.scss
+++ b/src/components/styles/app.scss
@@ -1,6 +1,7 @@
-html, *{
+*{
     box-sizing: border-box;
     margin: 0;
+    padding: 0;
 }
 
 html{
@@ -9,6 +10,7 @@ html{
 }
 
 body {
+    font-family: 'Poppins', sans-serif;
     width: 100%;
     margin: 0 auto;
 }
